# MiroFish

./: .env.example  README.md  package.json
backend/: pyproject.toml
backend/app/: config.py
backend/tests/: test_config_graph_backend.py  test_entity_reader_graphiti.py  test_file_parser_defaults.py  test_graph_api_graphiti.py  test_graph_backend_contract.py  test_graph_memory_updater_graphiti.py  test_graphiti_graph_builder.py  test_project_defaults.py  test_report_tools_graphiti.py  test_simulation_api_graphiti.py
docs/lectures/: pdf-to-analysis-first-principles-case.aux  pdf-to-analysis-first-principles-case.out  pdf-to-analysis-first-principles-case.tex  pdf-to-analysis-first-principles-case.toc
docs/plans/: 2026-03-29-graphiti-build-speed-design.md  2026-03-29-graphiti-build-speed.md  2026-03-29-graphiti-default-chunk-2500-design.md  2026-03-29-graphiti-default-chunk-2500.md  2026-03-29-graphiti-default-chunk-tuning.md  2026-03-29-graphiti-default-mini-4000-design.md  2026-03-29-graphiti-default-mini-4000.md  2026-03-29-graphiti-default-mini-6500-design.md  2026-03-29-graphiti-default-mini-6500.md  2026-03-29-graphiti-event-loop-fix.md  2026-03-29-graphiti-local-design.md  2026-03-29-graphiti-local-implementation.md  2026-03-29-graphiti-local-startup-design.md  2026-03-29-graphiti-local-startup.md  2026-03-29-graphiti-wal-recovery.md  (+2 more)
graphiti_service/: .env.example  app.py  config.py  pyproject.toml  service.py
graphiti_service/tests/: test_app.py  test_service.py
scripts/: benchmark_graphiti_speed.py  test_graphiti_dev_scripts.mjs
(+12 files in other folders)
