[project]
name = "mirofish-graphiti-service"
version = "0.1.0"
description = "Local Graphiti sidecar service for MiroFish"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "graphiti-core[kuzu]==0.28.2",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
